--- a/cs.html
+++ b/cs.html
@@ -654,36 +654,13 @@
     <div class="course-container">
         <h1>Computer Science</h1>
 
-        <!-- <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
+         <div class="lecture">
+            <h2>All Material</h2>
+            <p>  </p>
+            <a href="https://www.youtube.com/playlist?list=PLsnvpvHuTUbDQZEakmW9YzwGxHTO9VlUR" target="_blank">YouTube Video </a>
+            <a href="https://drive.google.com/drive/folders/1RTakuNor6594Z289NWygz1lmd-jjHHQ-?usp=sharing" target="_blank">PDF File </a>
 
         </div>
-
-        <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-        </div>
-
-        <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-        </div> -->
     </div>
 
     <header>
