--- a/math.html
+++ b/math.html
@@ -655,36 +655,28 @@
     <div class="course-container">
         <h1>Math-1</h1>
 
-        <!-- <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-
-        </div>
+        <div class="lecture">
+            <h2>Lec 1: Domain</h2>
+            <p>  </p>
+            <a href="https://youtu.be/Gn0-7-6RbcE?si=qrppycvRwqisUJww" target="_blank">YouTube Video </a>
+            <a href="https://drive.google.com/file/d/10pzv_FzOfDU8U8FVJ2CZpaXrLw1jqFBe/view?usp=drivesdk" target="_blank">PDF File </a>
+            <a href="https://drive.google.com/file/d/11P8D6FdCBgBVYJMxabE5iQZQIZSGwXZO/view?usp=drivesdk" target="_blank">Quiz File </a>
+            <a href="https://drive.google.com/file/d/1q7MDQrTF6owu8s8hG8x8Qw7ZAUhMOLiT/view?usp=drivesdk" target="_blank">Answer Quiz File </a>      
+          </div>
 
         <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
+            <h2>Lec 1 part[2]: Range</h2>
+            <p>  </p>
+            <a href="https://youtu.be/aD5RwMfzysw?si=ivVSWBkTnrACYyA_" target="_blank">YouTube Video </a>
         </div>
 
+
         <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-        </div> -->
+            <h2>Lec 2: Inverse function</h2>
+            <p>  </p>
+            <a href="https://youtu.be/xXUq8zgFoDg?si=uX1NZmpf0lq8T1Xe" target="_blank">YouTube Video </a>
+            <a href="https://drive.google.com/file/d/11f0_4Hqgc0QYPhbvU8I2KomR4Cew5__P/view?usp=drivesdk" target="_blank">Quiz File </a>
+        </div> 
     </div>
 
     <header>
