--- a/physics.html
+++ b/physics.html
@@ -655,36 +655,12 @@
     <div class="course-container">
         <h1>Physics</h1>
 
-        <!-- <div class="lecture">
-            <h2>Lec 1: ..........</h2>
+         <div class="lecture">
+            <h2>Lec 1: Electrostatic Charge</h2>
             <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
+            <a href="https://drive.google.com/file/d/1-zmaGxvgfF6fTkp4EONgKsUHEr-wat1r/view?usp=drivesdk" target="_blank">PDF File </a>
 
         </div>
-
-        <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-        </div>
-
-        <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-        </div> -->
     </div>
 
     <header>
