--- a/statistics.html
+++ b/statistics.html
@@ -655,36 +655,18 @@
     <div class="course-container">
         <h1>Statistics-1</h1>
 
-        <!-- <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
+         <div class="lecture">
+            <h2>Lec 1: Intro</h2>
+            <p>  </p>
+            <a href="https://drive.google.com/file/d/10U2eJYTL-F-yqKxQHrfME4CQDGgGnals/view?usp=drivesdk" target="_blank">PDF File </a>
 
         </div>
 
         <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
+            <h2>Lec 2: Probability</h2>
+            <p>  </p>
+            <a href="https://drive.google.com/file/d/10gWP3dpzHwaLXSXfAuecePmPuWIG0ZIo/view?usp=drivesdk" target="_blank">PDF File </a>
         </div>
-
-        <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-        </div> -->
     </div>
 
     <header>
