--- a/Learning_Progress.html
+++ b/Learning_Progress.html
@@ -296,11 +296,11 @@
         };
 
         const lessons = {
-            'Math-1': ['Lec0'],
-            'Computer Science': ['Lec0'],
-            'English-1': ['Lec0'],
-            'Physics': ['Lec0'],
-            'Statistics-1': ['Lec0'],
+            'Math-1': ['Lec1','lec2'],
+            'Computer Science': ['Lec1'],
+            'English-1': ['Lec1'],
+            'Physics': ['Lec1'],
+            'Statistics-1': ['Lec1','lec2'],
             'PL-2': ['Lec0'],
             'Database': ['Lec0'],
             'SA-1': ['Lec0'],
