--- a/math.html
+++ b/math.html
@@ -660,8 +660,8 @@
             <p>  </p>
             <a href="https://youtu.be/Gn0-7-6RbcE?si=qrppycvRwqisUJww" target="_blank">YouTube Video </a>
             <a href="https://drive.google.com/file/d/10pzv_FzOfDU8U8FVJ2CZpaXrLw1jqFBe/view?usp=drivesdk" target="_blank">PDF File </a>
-            <a href="https://drive.google.com/file/d/11P8D6FdCBgBVYJMxabE5iQZQIZSGwXZO/view?usp=drivesdk" target="_blank">Quiz File </a>
-            <a href="https://drive.google.com/file/d/1q7MDQrTF6owu8s8hG8x8Qw7ZAUhMOLiT/view?usp=drivesdk" target="_blank">Answer Quiz File </a>      
+            <a href="https://drive.google.com/file/d/11P8D6FdCBgBVYJMxabE5iQZQIZSGwXZO/view?usp=drivesdk" target="_blank">Sheet File </a>
+            <a href="https://drive.google.com/file/d/1q7MDQrTF6owu8s8hG8x8Qw7ZAUhMOLiT/view?usp=drivesdk" target="_blank">Answer sheet File </a>      
           </div>
 
         <div class="lecture">
@@ -675,7 +675,7 @@
             <h2>Lec 2: Inverse function</h2>
             <p>  </p>
             <a href="https://youtu.be/xXUq8zgFoDg?si=uX1NZmpf0lq8T1Xe" target="_blank">YouTube Video </a>
-            <a href="https://drive.google.com/file/d/11f0_4Hqgc0QYPhbvU8I2KomR4Cew5__P/view?usp=drivesdk" target="_blank">Quiz File </a>
+            <a href="https://drive.google.com/file/d/11f0_4Hqgc0QYPhbvU8I2KomR4Cew5__P/view?usp=drivesdk" target="_blank">Sheet File </a>
         </div> 
     </div>
 
