--- a/Learning_Progress.html
+++ b/Learning_Progress.html
@@ -297,24 +297,24 @@
 
         const lessons = {
             'Math-1': ['Lec1','lec2'],
-            'Computer Science': ['Lec1'],
-            'English-1': ['Lec1'],
-            'Physics': ['Lec1'],
+            'Computer Science': ['Lec1','lec2'],
+            'English-1': ['Lec1','lec2'],
+            'Physics': ['Lec1','lec2'],
             'Statistics-1': ['Lec1','lec2'],
-            'PL-2': ['Lec0'],
-            'Database': ['Lec0'],
-            'SA-1': ['Lec0'],
-            'Logic': ['Lec0'],
-            'Data structure': ['Lec0'],
-            'DC': ['Lec0'],
-            'Data Mining': ['Lec0'],
-            'Database-2': ['Lec0'],
-            'AI': ['Lec0','Lec1'],
-            'Big Data': ['Lec0'],
-            'Data Storage': ['Lec0'],
-            'Parallel Processing': ['Lec0'],
-            'Machine learning': ['Lec0'],
-            'Convex': ['Lec0']
+            'PL-2': ['Lec1','lec2'],
+            'Database': ['Lec1','lec2'],
+            'SA-1': ['Lec0','lec1'],
+            'Logic': ['Lec1','lec2'],
+            'Data structure': ['Lec1','lec2'],
+            'DC': ['Lec1','lec2'],
+            'Data Mining': ['Lec1','lec2'],
+            'Database-2': ['Lec1','lec2'],
+            'AI': ['Lec1','lec2','Lec1'],
+            'Big Data': ['Lec1','lec2'],
+            'Data Storage': ['Lec1','lec2'],
+            'Parallel Processing': ['Lec1','lec2'],
+            'Machine learning': ['Lec1','lec2'],
+            'Convex': ['Lec1','lec2']
 
         };
 
