--- a/news.html
+++ b/news.html
@@ -283,9 +283,9 @@
         <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
         <ul id="nav-menu">
             <li><a href="time.html" target="_blank"><i class="fas fa-clock"></i> Time</a></li>
-            <li><a href="rec.html" target="_blank"><i class="fas fa-video"></i> Recording</a></li>
             <li><a href="draw.html"><i class="fas fa-pencil-alt"></i> Draw Notes</a></li>
-            <li><a href="Learning_Progress.html" target="_blank"><i class="fas fa-book-open"></i> Learning Progress</a></li>
+            <li><a href="Learning_Progress.html" target="_blank"><i class="fas fa-book-open"></i> Learning Progress</a>
+            </li>
             <li><a href="news.html"><i class="fas fa-newspaper"></i> News</a></li>
             <li>
                 <a href="#" class="dropdown-toggle"><i class="fas fa-chart-line"></i> Level</a>
@@ -351,10 +351,15 @@
             'level2': {
                 title: "Level 2 News",
                 content: `
-                    <div class="news-item">NAN</div>
-                `,
+    <div class="news-item">PL-2: Distribution grades: 50 Final - 20 mid - 10 Sheets - 10 project - 10 Quizzes</div>
+    <div class="news-item">DS: Distribution grades: 50 Final - 20 Mid - 10 Assignment - 10 Quizzes - 10 Practical</div>
+    <div class="news-item">DB: Distribution grades: 50 Final - 25 Mid (or 30) - 10 Quizzes - 10 Practical</div>
+    <div class="news-item">DC: Distribution grades: 50 Final - 30 Mid - 20 undetermined exactly</div>
+    <div class="news-item">LD: Distribution grades: 50 Final - 30 Mid - 10 Quizzes - 10 Assignment</div>
+    `,
                 moreLink: "#"
             },
+
             'is': {
                 title: "IS News",
                 content: `
