--- a/pl-2.html
+++ b/pl-2.html
@@ -632,7 +632,6 @@
         <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
         <ul id="nav-menu">
             <li><a href="time.html" target="_blank"><i class="fas fa-clock"></i> Time</a></li>
-            <li><a href="rec.html" target="_blank"><i class="fas fa-video"></i> Recording</a></li>
             <li><a href="draw.html"><i class="fas fa-pencil-alt"></i> Draw Notes</a></li>
             <li><a href="Learning_Progress.html" target="_blank"><i class="fas fa-book-open"></i> Learning Progress</a></li>
             <li><a href="news.html"><i class="fas fa-newspaper"></i> News</a></li>
@@ -655,36 +654,20 @@
     <div class="course-container">
         <h1>PL-2</h1>
 
-        <!-- <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
+        <div class="lecture">
+            <h2>Lec 1: Intro part[1]</h2>
+            <p>  </p>
+            <a href="https://youtu.be/WnMPk6_8qDo?si=5N1s9xoNp9r-ft69" target="_blank">YouTube Video </a>
 
         </div>
 
         <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
+            <h2>Lec 1: Intro part[2]</h2>
+            <p>  </p>
+            <a href="https://youtu.be/r_0n_M38Or0?si=gxhb7PwgQDRpSnhM" target="_blank">YouTube Video </a>
+
         </div>
 
-        <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-        </div> -->
     </div>
 
     <header>
