--- a/sa-1.html
+++ b/sa-1.html
@@ -632,7 +632,6 @@
         <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
         <ul id="nav-menu">
             <li><a href="time.html" target="_blank"><i class="fas fa-clock"></i> Time</a></li>
-            <li><a href="rec.html" target="_blank"><i class="fas fa-video"></i> Recording</a></li>
             <li><a href="draw.html"><i class="fas fa-pencil-alt"></i> Draw Notes</a></li>
             <li><a href="Learning_Progress.html" target="_blank"><i class="fas fa-book-open"></i> Learning Progress</a></li>
             <li><a href="news.html"><i class="fas fa-newspaper"></i> News</a></li>
@@ -655,36 +654,27 @@
     <div class="course-container">
         <h1>SA-1</h1>
 
-        <!-- <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
+        <div class="lecture">
+            <h2>Lec 0: Intro </h2>
+            <p>  </p>
+            <a href="https://youtu.be/ggGmXba7yYU?si=BtW7DpnCoxAjaorx" target="_blank">YouTube Video </a>
+            <a href="https://drive.google.com/file/d/1O9feKWw00VPG-bq6Qw0wm7f0hrX4qgfu/view?usp=drivesdk" target="_blank">PDF File </a>
+            <a href="https://t.me/+l2VnN_O9LJw0YWVk" target="_blank">Quiz </a>
+
+
 
         </div>
 
         <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
+            <h2>Lec 1: Essentials</h2>
+            <p>  </p>
+            <a href="https://youtu.be/F0Eqbb5sQjg?si=psqVBeMn7jCPtf5b" target="_blank">YouTube Video </a>
+            <a href="https://drive.google.com/file/d/1a4u9DSn28sdfA2HkQ9p6mGO1O-uKaLh9/view?usp=drivesdk" target="_blank">PDF File </a>
+            <a href="https://t.me/+l2VnN_O9LJw0YWVk" target="_blank">Quiz </a>
+
+
         </div>
 
-        <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-        </div> -->
     </div>
 
     <header>
