--- a/Convex.html
+++ b/Convex.html
@@ -631,7 +631,6 @@
         <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
         <ul id="nav-menu">
             <li><a href="time.html" target="_blank"><i class="fas fa-clock"></i> Time</a></li>
-            <li><a href="rec.html" target="_blank"><i class="fas fa-video"></i> Recording</a></li>
             <li><a href="draw.html"><i class="fas fa-pencil-alt"></i> Draw Notes</a></li>
             <li><a href="Learning_Progress.html" target="_blank"><i class="fas fa-book-open"></i> Learning Progress</a></li>
             <li><a href="news.html"><i class="fas fa-newspaper"></i> News</a></li>
@@ -659,7 +658,7 @@
             <h2>Lec 0:  Intro</h2>
             <p>  intro to Convex </p>
             <a href="" target="_blank">YouTube Video </a>
-            <a href="https://drive.google.com/file/d/1wQcBcj5sNcoz1X4kIk2O3o2wXKrJ9wlz/view?usp=drivesdk" target="_blank">PDF File </a>
+            <!-- <a href="https://drive.google.com/file/d/1wQcBcj5sNcoz1X4kIk2O3o2wXKrJ9wlz/view?usp=drivesdk" target="_blank">PDF File </a> -->
         </div>
 
      
