--- a/Data Structure.html
+++ b/Data Structure.html
@@ -631,7 +631,6 @@
         <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
         <ul id="nav-menu">
             <li><a href="time.html" target="_blank"><i class="fas fa-clock"></i> Time</a></li>
-            <li><a href="rec.html" target="_blank"><i class="fas fa-video"></i> Recording</a></li>
             <li><a href="draw.html"><i class="fas fa-pencil-alt"></i> Draw Notes</a></li>
             <li><a href="Learning_Progress.html" target="_blank"><i class="fas fa-book-open"></i> Learning Progress</a></li>
             <li><a href="news.html"><i class="fas fa-newspaper"></i> News</a></li>
@@ -654,36 +653,26 @@
     <div class="course-container">
         <h1>Data Structure</h1>
 
-        <!-- <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
+         <div class="lecture">
+            <h2>Lec 1: Intro part[1]</h2>
+            <p>  </p>
+            <a href="https://youtu.be/XxkJpDYhEbw?si=I5ltfeknwP03IeVN" target="_blank">YouTube Video </a>
 
         </div>
 
         <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
+            <h2>Lec 1: Intro part[2]</h2>
+            <p>  </p>
+            <a href="https://youtu.be/vsFkNV38cWw?si=Nn4exCj84SBex4xg" target="_blank">YouTube Video </a>
+
         </div>
 
         <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-        </div> -->
+            <h2>Lec 2: Stack</h2>
+            <p>  </p>
+            <a href="https://youtu.be/hyricZM9ZqA?si=kZomstcnWzJJeRCa" target="_blank">YouTube Video </a>
+
+        </div>
     </div>
 
     <header>
