--- a/data_mining.html
+++ b/data_mining.html
@@ -631,7 +631,6 @@
         <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
         <ul id="nav-menu">
             <li><a href="time.html" target="_blank"><i class="fas fa-clock"></i> Time</a></li>
-            <li><a href="rec.html" target="_blank"><i class="fas fa-video"></i> Recording</a></li>
             <li><a href="draw.html"><i class="fas fa-pencil-alt"></i> Draw Notes</a></li>
             <li><a href="Learning_Progress.html" target="_blank"><i class="fas fa-book-open"></i> Learning Progress</a></li>
             <li><a href="news.html"><i class="fas fa-newspaper"></i> News</a></li>
@@ -652,17 +651,17 @@
 
 
 
-    <div class="course-container">
+     <div class="course-container">
         <h1>Data Mining</h1>
 
          <div class="lecture">
             <h2>Lec 0:  Intro</h2>
             <p>  intro to Data Mining </p>
             <a href="https://youtu.be/eAy8pVxqcJY?si=R8Z92c41lbgp9M66" target="_blank">YouTube Video </a>
-            <a href="https://drive.google.com/file/d/1AiIlVODxWOs61U_fB6h5PhmO7tqW5edx/view?usp=drivesdk" target="_blank">PDF File </a>
+            <!-- <a href="https://drive.google.com/file/d/1AiIlVODxWOs61U_fB6h5PhmO7tqW5edx/view?usp=drivesdk" target="_blank">PDF File </a>
             <a href="https://drive.google.com/drive/folders/1cr83ZpDkaFdlv48g3KZBsesJyVA_5Bxt" target="_blank">Book </a>
-            <a href="" target="_blank">Teams code </a>
-        </div>
+            <a href="" target="_blank">Teams code </a> -->
+        </div> 
 
     </div>
 
