--- a/database-2.html
+++ b/database-2.html
@@ -631,7 +631,6 @@
         <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
         <ul id="nav-menu">
             <li><a href="time.html" target="_blank"><i class="fas fa-clock"></i> Time</a></li>
-            <li><a href="rec.html" target="_blank"><i class="fas fa-video"></i> Recording</a></li>
             <li><a href="draw.html"><i class="fas fa-pencil-alt"></i> Draw Notes</a></li>
             <li><a href="Learning_Progress.html" target="_blank"><i class="fas fa-book-open"></i> Learning Progress</a></li>
             <li><a href="news.html"><i class="fas fa-newspaper"></i> News</a></li>
@@ -655,7 +654,7 @@
     <div class="course-container">
         <h1>database-2</h1>
 
-         <div class="lecture">
+         <!-- <div class="lecture">
             <h2>Lec 0:  Intro</h2>
             <p>  intro to database-2 </p>
             <a href="" target="_blank">YouTube Video </a>
@@ -663,7 +662,7 @@
             <a href="https://drive.google.com/file/d/1Q7PTNHcbKBPew9xxhcR85408qn4M_E6x/view?usp=drivesdk" target="_blank">Book </a>
             <a href="https://teams.microsoft.com/l/channel/19%3AWkgy8LgdVTvsVyhx7uYbLfwKZtKJ5xeXi0mHx71yK2I1%40thread.tacv2/?groupId=082401fc-a42b-47d6-9701-7b755ffbaa00" target="_blank">Teams code </a>
 
-        </div>
+        </div> -->
 
      
     </div>
