--- a/logic.html
+++ b/logic.html
@@ -631,7 +631,6 @@
         <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
         <ul id="nav-menu">
             <li><a href="time.html" target="_blank"><i class="fas fa-clock"></i> Time</a></li>
-            <li><a href="rec.html" target="_blank"><i class="fas fa-video"></i> Recording</a></li>
             <li><a href="draw.html"><i class="fas fa-pencil-alt"></i> Draw Notes</a></li>
             <li><a href="Learning_Progress.html" target="_blank"><i class="fas fa-book-open"></i> Learning Progress</a></li>
             <li><a href="news.html"><i class="fas fa-newspaper"></i> News</a></li>
@@ -654,36 +653,23 @@
     <div class="course-container">
         <h1>Logic</h1>
 
-        <!-- <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
+        <div class="lecture">
+            <h2>Lec 1: One`s Complement & Tow`s Complement</h2>
+            <p>  </p>
+            <a href="https://drive.google.com/file/d/1EgIz3JnRwdZ6SXz0t9s0GWs81QwyOJjB/view?usp=drivesdk" target="_blank"> Video </a>
+            <a href="https://drive.google.com/file/d/1R_PFerLTfe9zu6ojKhC6EMqojS1NDr8P/view?usp=drivesdk" target="_blank">Quiz </a>
 
         </div>
 
         <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
+            <h2>Lec 2:Boolean</h2>
+            <p>  </p>
+            <a href="https://drive.google.com/file/d/1FuRlObwJkw3sLLqbZvtlrkbiSX8JKMHH/view?usp=drivesdk" target="_blank"> Video Part[1] </a>
+            <a href="https://drive.google.com/file/d/1rGXeyfUJfFVS42jkDv0cL7kLQzBNdt9L/view?usp=drivesdk" target="_blank"> Video Part[2] </a>
+            <a href="https://drive.google.com/file/d/1XDJhJTx3vHL6p6oISzwB5vJ7oWV8Y8dY/view?usp=drivesdk" target="_blank"> Video Part[3] </a>
+            <a href="https://drive.google.com/file/d/1qcl8mf-0QP43zFGD6s9GXTEwh-wrhTTu/view?usp=drivesdk" target="_blank">Quiz  </a>
         </div>
-
-        <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-        </div> -->
+        </div> 
     </div>
 
     <header>
