--- a/Learning_Progress.html
+++ b/Learning_Progress.html
@@ -296,25 +296,26 @@
         };
 
         const lessons = {
-            'Math-1': ['Lec1','lec2'],
-            'Computer Science': ['Lec1','lec2'],
-            'English-1': ['Lec1','lec2'],
-            'Physics': ['Lec1','lec2'],
-            'Statistics-1': ['Lec1','lec2'],
-            'PL-2': ['Lec1','lec2'],
-            'Database': ['Lec1','lec2'],
+            'Math-1': ['Lec1','Lec2'],
+            'Computer Science': ['Lec1','Lec2'],
+            'English-1': ['Lec1','Lec2'],
+            'Physics': ['Lec1','Lec2'],
+            'Statistics-1': ['Lec1','Lec2'],
+            'PL-2': ['Lec1','Lec2'],
+            'Database': ['Lec1','Lec2'],
             'SA-1': ['Lec0','lec1'],
-            'Logic': ['Lec1','lec2'],
-            'Data structure': ['Lec1','lec2'],
-            'DC': ['Lec1','lec2'],
-            'Data Mining': ['Lec1','lec2'],
-            'Database-2': ['Lec1','lec2'],
-            'AI': ['Lec1','lec2','Lec1'],
-            'Big Data': ['Lec1','lec2'],
-            'Data Storage': ['Lec1','lec2'],
-            'Parallel Processing': ['Lec1','lec2'],
-            'Machine learning': ['Lec1','lec2'],
-            'Convex': ['Lec1','lec2']
+            'Logic': ['Lec1','Lec2'],
+            'Data structure': ['Lec1','Lec2'],
+            'DC': ['Lec1','Lec2'],
+            'Data Mining': ['Lec1','Lec2'],
+            'Database-2': ['Lec1','Lec2'],
+            'Data Analytical':['Lec1','Lec2'],
+            'AI': ['Lec1','Lec2'],
+            'Big Data': ['Lec1','Lec2'],
+            'Data Storage': ['Lec1','Lec2'],
+            'Parallel Processing': ['Lec1','Lec2'],
+            'Machine learning': ['Lec1','Lec2'],
+            'Convex': ['Lec1','Lec2']
 
         };
 
